--- a/detail.html
+++ b/detail.html
@@ -237,6 +237,12 @@
 
                         <div class="video-card"></div>
 
+                        <div class="video-card"></div>
+                        
+                        <div class="video-card"></div>
+                        
+                        <div class="video-card"></div>
+
                     </div>
                 </div>
 
