pushing by Tisha

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         />
       </button>
     </header>
-
+  <main>
     <!--
         -SIDEBAR
       -->
@@ -131,12 +131,8 @@
       <!--
        - #BANNER
     -->
-
-     
-    
-
     </article>
-
+  </main>
   </body>
 
 </html>
